NEWS: update for 1.18.8

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,59 @@
 
+ModemManager 1.18.8
+-------------------------------------------
+
+ * A new connection status dispatcher setup is provided, where users can
+   provide custom scripts that will be called on bearer connect/disconnect
+   events. This dispatcher will make the netifd integration in openwrt work
+   much better, as we'll be able to report network-initiated disconnections
+   cleanly to netifd.
+
+   There are no default connection status dispatcher scripts installed, but
+   it's suggested distributions make sure the following directories exist:
+     - ${sysconfdir}/ModemManager/connection.d/
+     - ${libdir}/ModemManager/connection.d/
+
+ * API:
+   ** Add missing Simple interface definitions in ModemManager-names.h.
+
+ * Build:
+   ** meson: fix daemon enums dependencies.
+   ** meson: fix port enums includes.
+   ** meson: fix 'export_packages' in GIR setup.
+   ** meson: fix simtech plugin module name.
+   ** systemd: don't run ModemManager in containers.
+
+ * Core:
+   ** serial: ensure the port object is valid after BUFFER_FULL handling.
+   ** netlink: use unaligned netlink attribute length.
+   ** netlink: only change IFF_UP flag.
+   ** bearer: match unknown auth to chap in loose comparisons.
+   ** charsets: return error if UTF-8 validation fails.
+   ** fcc-unlock: make scripts POSIX shell compatible.
+   ** modem-helpers: consider minimum ID when choosing best profile.
+   ** modem-helpers: fix reading <Act> given in COPS=? responses.
+   ** sms: prevent crash if date is out of range.
+   ** profile-manager: fix copy-paste error on tags for quarks.
+
+ * QMI:
+   ** Ignore slot status indications until initial status is known.
+   ** Return error when loading capabilities if none is found.
+
+ * MBIM:
+   ** Default initial EPS bearer's auth to chap when unknown.
+   ** Update default error when network error is out of range.
+
+ * mmcli:
+   ** Fix key length when printing list of items.
+
+ * Plugins:
+   ** linktop: new port type hints.
+   ** cinterion: add support for PLSx3w modems
+   ** huawei: disable +CPOL based features in Huawei E226
+
+ * Several other minor improvements and fixes.
+
+
 ModemManager 1.18.6
 -------------------------------------------
 
